--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <label>
                 <input type="checkbox" id="highlight-toggle" checked> Show only sessions with my papers
             </label>
-            <a href="highlighted_papers.csv" download="highlighted_papers.csv" class="download-btn">Download Highlights</a>
+            <a href="highlighted_papers.csv" download="highlighted_papers.csv" class="download-btn">Download Highlights (to use in ChatPGT conversations)</a>
         </div>
         <div id="schedule"></div>
     </div>
